--- a/finanzas.html
+++ b/finanzas.html
@@ -74,15 +74,32 @@
 					</ul>
 				</nav>
 				<ul class="submenu_left">
-					<li><a href="vivienda.html">Vivienda</a></li>
-					<li><a href="#">Ahorro e Inversión</a></li>
-					<li><a href="#">Cesantías</a></li>
-					<li><a href="#">Endeudamiento</a></li>
+					<li><a data-id="first" class="active" href="vivienda.html">Vivienda</a></li>
+					<li><a data-id="second" href="#">Ahorro e Inversión</a></li>
+					<li><a data-id="third" href="#">Cesantías</a></li>
+					<li><a data-id="fourth" href="#">Endeudamiento</a></li>
 				</ul>
 				<div class="box_content">
-					<h2>Interdum malesuada</h2>
-					<h3>faucibus nec hendrerit eros</h3>
-					<p>Luctus luctus nibh in, blandit massa donec rutrumtus luctus nibh in, blandit massa donec rutrum Luctus luctus nibh in, blandit massa donec rutrum nisl fringilla nunc dapibus tortor at gravida mattis.</p>
+					<div id="first" class="tabs_content active">
+						<h2>Vivienda</h2>
+						<!-- <h3>faucibus nec hendrerit eros</h3> -->
+						<p><strong></strong> Brindar consejos para que los consumidores financieros tomen decisiones adecuadas al momento de adquirir su vivienda y posteriores acciones sobre la misma.</p>
+					</div>
+					<div id="second" class="tabs_content">
+						<h2>Ahorro e inversión</h2>
+						<!-- <h3>faucibus nec hendrerit eros</h3> -->
+						<p>El ahorro es una cantidad de dinero que se reúne periódicamente para un fin específico, lo cual sucede después de haber pagado las obligaciones y cubrir los gastos. Establezca objetivos claros, realice su plan de ahorro programado; es necesario saber con exactitud para qué se está guardando el dinero.</p>
+					</div>
+					<div id="third" class="tabs_content">
+						<h2>Cesantiás</h2>
+						<!-- <h3>faucibus nec hendrerit eros</h3> -->
+						<p><strong>Asegurando tu futuro: </strong> El auxilio de cesantías es una prestación social que se encuentra a cargo del empleador, consistente en el pago al trabajador de un mes de salario por cada año de servicios prestados y proporcionalmente por fracción de año; tienen derecho a recibir este auxilio todos los trabajadores y se deberá liquidar desde el primer hasta el último día de trabajo.</p>
+					</div>
+					<div id="fourth" class="tabs_content">
+						<h2>Endeudamiento</h2>
+						<!-- <h3>faucibus nec hendrerit eros</h3> -->
+						<p><strong>Nivel óptimo de endeudamiento:</strong> Se recomienda mantener un adecuado control de sus deudas debe ser una tarea primordial y la manera correcta de conducirse.  Lo indicado  es hacer un análisis cuidadoso de las necesidades primordiales para su día a día.</p>
+					</div>
 					<div class="calification">
 						<h3>Calificación:</h3>
 						<div class="points_stars">
