--- a/vivienda.html
+++ b/vivienda.html
@@ -59,7 +59,7 @@
 						<h4>sign_in</h4>
 					</div>
 					<div class="go_back">
-						<div class="icon-reply"></div>
+						<img src="img/nav_icon4.png" alt="">
 					</div>
 				</div>	
 				<nav>
@@ -75,15 +75,51 @@
 					</ul>
 				</nav>
 				<ul class="submenu_left">
-					<li><a class="active" href="vivienda.html">Vivienda</a></li>
-					<li><a href="#">Ahorro e Inversión</a></li>
-					<li><a href="#">Cesantías</a></li>
-					<li><a href="#">Endeudamiento</a></li>
+					<li><a data-id="first" class="active" href="#">¿Por qué es importante comprar vivienda?</a></li>
+					<li><a data-id="second" href="#">¿Qué debo saber antes de comprar vivienda?</a></li>
+					<li><a data-id="third" href="#">¿Con qué mecanismos de financiación cuento?</a></li>
+					<li><a data-id="fourth" href="#">¿Qué gastos adicionales debo tener en cuenta al momento de comprar vivienda?</a></li>
+					<li><a data-id="fiveth" href="#">¿Cómo puedo organizar el presupuesto para administrar mi vivienda?</a></li>
+					<li><a data-id="sixth" href="#">¿Qué aspectos debo tener en cuenta después de comprar vivienda?</a></li>
+					<li><a data-id="seventh" href="#">¿Qué debo tener en cuenta para mejorar mi vivienda?</a></li>
 				</ul>
 				<div class="box_content">
-					<h2>Interdum malesuada</h2>
-					<h3>faucibus nec hendrerit eros</h3>
-					<p>Luctus luctus nibh in, blandit massa donec rutrumtus luctus nibh in, blandit massa donec rutrum Luctus luctus nibh in, blandit massa donec rutrum nisl fringilla nunc dapibus tortor at gravida mattis.</p>
+					<div id="first" class="tabs_content active">
+						<h2>Respuesta:</h2>
+						<!-- <h3>faucibus nec hendrerit eros</h3> -->
+						<p>Estabilidad para la familia, seguridad, patrimonio, bienestar, inversión, y demás beneficios propios de este concepto.</p>
+					</div>	
+					<div id="second" class="tabs_content">
+						<h2>Respuesta:</h2>
+						<!-- <h3>faucibus nec hendrerit eros</h3> -->
+						<p>Ventajas y desventajas de ser propietario; cómo es la vivienda que necesita, en qué sector podrá comprarla y el valor máximo que puede pagar por ella; ha presupuestado el dinero que necesitará para vivir en su nuevo inmueble (cortinas, mudanza, cambio de guardas etc...).</p>
+					</div>	
+					<div id="third" class="tabs_content">
+						<h2>Respuesta:</h2>
+						<!-- <h3>faucibus nec hendrerit eros</h3> -->
+						<p>Crédito Hipotecario, Fiducia, Leasing Habitacional, entre otros; es importante saber si desea adquirir vivienda nueva o usada, analizar ventajas y desventajas de cada uno.</p>
+					</div>	
+					<div id="fourth" class="tabs_content">
+						<h2>Respuesta:</h2>
+						<!-- <h3>faucibus nec hendrerit eros</h3> -->
+						<p>Ser consciente del negocio en el que se está metiendo y todas las implicaciones que ello trae para su vida. Esto es qué tan dispuesto está a sacrificar ciertas condiciones y comodidades que tenía en su vida, para empezar a asumir una responsabilidad de esta dimensión.</br>
+						En esto, no sólo implica pagar el crédito y los impuestos, sino también las reparaciones, el arreglo, los inconvenientes con servicios y demás que tenga que empezar a considerar al tener una vivienda nueva.</p>
+					</div>	
+					<div id="fiveth" class="tabs_content">
+						<h2>Respuesta:</h2>
+						<!-- <h3>faucibus nec hendrerit eros</h3> -->
+						<p>Consejos para iniciar su vida como propietario; Bienestar para usted y protección para su inversión; ahorre en servicios públicos y cuide el medio ambiente; sencillos consejos, grandes beneficios; venta de su inmueble, si decide cambiar, aprenda qué debe tener en cuenta.</p>
+					</div>	
+					<div id="sixth" class="tabs_content">
+						<h2>Respuesta:</h2>
+						<!-- <h3>faucibus nec hendrerit eros</h3> -->
+						<p>De un buen manejo al mecanismo de financiación al que accedió, continúe con el ahorro programado, no descuide sus gastos necesarios y adicionales, verifique fuentes de ingresos.</p>
+					</div>	
+					<div id="seventh" class="tabs_content">
+						<h2>Respuesta:</h2>
+						<!-- <h3>faucibus nec hendrerit eros</h3> -->
+						<p>Siempre es bueno mejorar pero se deben tener previstos los gastos de mejora de vivienda sin que afecten los gastos principales y la deuda inicial.</p>
+					</div>
 					<div class="calification">
 						<h3>Calificación:</h3>
 						<div class="points_stars">
