--- a/heroes.html
+++ b/heroes.html
@@ -20,6 +20,7 @@
 <body>
 
 	<!-- header  -->
+
 	<header>
 		<div class="container">
 			<div class="row">
@@ -50,15 +51,17 @@
 		<div class="path_header">
 			<div class="container">
 				<a href="home.html">Inicio <span> / </span></a>
-				<a href="finanzas.html">Finanzas Personales </a>
+				<a href="heroes.html">Pequeños Heroes</a>
 			</div>
 		</div>
 	</header>	
 
-	<section class="home-bg finanzas">
+	<section class="home-bg heroes">
 		<div class="stick">
 			<div class="container">
-				<h2><span>.........</span>Finanzas Personales</h2>
+				<div class="wood">
+					<h2>El Mundo del dinero</h2>
+				</div>
 			</div>
 		</div>
 		<div class="container">
@@ -86,32 +89,20 @@
 						<span data-id="panel4"><img src="img/nav_icon4.png" alt=""></span>
 					</ul>
 				</nav>
-				<ul class="submenu_left">
-					<li><a data-id="first" class="active" href="vivienda.html">Vivienda</a></li>
-					<li><a data-id="second" href="#">Ahorro e Inversión</a></li>
-					<li><a data-id="third" href="#">Cesantías</a></li>
-					<li><a data-id="fourth" href="#">Endeudamiento</a></li>
-				</ul>
 				<div class="box_content">
-					<div id="first" class="tabs_content active">
-						<h2>Vivienda</h2>
-						<!-- <h3>faucibus nec hendrerit eros</h3> -->
-						<p><strong></strong> Brindar consejos para que los consumidores financieros tomen decisiones adecuadas al momento de adquirir su vivienda y posteriores acciones sobre la misma.</p>
-					</div>
-					<div id="second" class="tabs_content">
-						<h2>Ahorro e inversión</h2>
-						<!-- <h3>faucibus nec hendrerit eros</h3> -->
-						<p>El ahorro es una cantidad de dinero que se reúne periódicamente para un fin específico, lo cual sucede después de haber pagado las obligaciones y cubrir los gastos. Establezca objetivos claros, realice su plan de ahorro programado; es necesario saber con exactitud para qué se está guardando el dinero.</p>
-					</div>
-					<div id="third" class="tabs_content">
-						<h2>Cesantiás</h2>
-						<!-- <h3>faucibus nec hendrerit eros</h3> -->
-						<p><strong>Asegurando tu futuro: </strong> El auxilio de cesantías es una prestación social que se encuentra a cargo del empleador, consistente en el pago al trabajador de un mes de salario por cada año de servicios prestados y proporcionalmente por fracción de año; tienen derecho a recibir este auxilio todos los trabajadores y se deberá liquidar desde el primer hasta el último día de trabajo.</p>
-					</div>
-					<div id="fourth" class="tabs_content">
-						<h2>Endeudamiento</h2>
-						<!-- <h3>faucibus nec hendrerit eros</h3> -->
-						<p><strong>Nivel óptimo de endeudamiento:</strong> Se recomienda mantener un adecuado control de sus deudas debe ser una tarea primordial y la manera correcta de conducirse.  Lo indicado  es hacer un análisis cuidadoso de las necesidades primordiales para su día a día.</p>
+					<div class="row">
+						<div class="col-md-6">
+							<h2>Vitae dicta sunt</h2>
+							<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. <br><br>
+							Ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam Nulla consequat. </p>
+						</div>
+						<div class="col-md-6">
+							<div class="fds">
+			<!-- 					<iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/VIDEO_ID" frameborder="0"></iframe> -->
+							<iframe width="100%" height="200" src="https://www.youtube.com/embed/vKNKtmXlgY4" frameborder="0" allowfullscreen></iframe>
+							</div>
+							<p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia.</p>
+						</div>
 					</div>
 					<div class="calification">
 						<h3>Calificación:</h3>
@@ -123,9 +114,11 @@
 							<span class="icon-star-outlined"></span>
 						</div>
 					</div>
-				</div>	
+				</div>
+				
 			</div>				
 		</div>
+		<div class="planet"></div>	
 	</section>
 
 	<!-- footer -->
@@ -178,6 +171,10 @@
 			</div>
 		</div>
 	</footer>
+
+	<script src="assets/js/particles.js"></script>
+	<script src="assets/js/particules.js"></script>
+
 
 </body>
 </html>
