--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
 			<ul>
 				<li class="col-md-4"><a href="finanzas.html" class=""><span><img src="img/header_icon1.png" alt=""></span>Finanzas Personales</a></li>
 				<li class="col-md-4"><a href="#" class=""><span><img src="img/header_icon2.png" alt=""></span>Consumidor Financiero</a></li>
-				<li class="col-md-4"><a href="#" class=""><span><img src="img/header_icon3.png" alt=""></span>Finanzas para niños</a></li>
+				<li class="col-md-4"><a href="heroes.html" class=""><span><img src="img/header_icon3.png" alt=""></span>Finanzas para niños</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -85,7 +85,7 @@
 						<h4>sign_in</h4>
 					</div>
 					<div class="go_back">
-						<div class="icon-reply"></div>
+						<img src="img/nav_icon4.png" alt="">
 					</div>
 				</div>
 				<nav>
@@ -99,7 +99,7 @@
 						<li id="panel4"><a href="#">Ayudas</a></li>
 						<span data-id="panel4"><img src="img/nav_icon4.png" alt=""></span>
 					</ul>
-				</nav>		
+				</nav>	
 				<div class="box_content">
 					<h2>Descripción:</h2>
 					<!-- <h3>faucibus nec hendrerit eros</h3> -->
