--- a/vivienda.html
+++ b/vivienda.html
@@ -23,12 +23,28 @@
 
 	<header>
 		<div class="container">
-			<div class="main_header">
-				<div class="row">
-					<a href="home.html"><img src="img/logo.png" alt="Caja de Honor"></a>
-					<a href="#"><img src="img/logo2.png" alt="Caja de Honor"></a>
-					<a href="#"><img src="img/logo3.png" alt="Caja de Honor"></a>
-					<a href="#"><img src="img/logo4.png" alt="Caja de Honor"></a>
+			<div class="row">
+				<div class="main_header">
+					<div class="col-sm-4 col-lg-3">
+						<div class="logo_box one">
+							<a href="home.html"><img src="img/logo.png" alt="Caja de Honor"></a>
+						</div>
+					</div>
+					<div class="col-sm-4 col-lg-2">
+						<div class="logo_box two">
+							<a href="#"><img src="img/logo2.png" alt="Caja de Honor"></a>
+						</div>
+					</div>
+					<div class="col-sm-4 col-lg-3">
+						<div class="logo_box three">
+							<a href="#"><img src="img/logo3.png" alt="Caja de Honor"></a>
+						</div>
+					</div>
+					<div class="col-sm-12 col-lg-offset-2 col-lg-2">
+						<div class="logo_box four">
+							<a href="#"><img src="img/logo4.png" alt="Caja de Honor"></a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -39,9 +55,7 @@
 				<a href="vivienda.html">Vivienda </a>
 			</div>
 		</div>
-	</header>
-
-	
+	</header>	
 
 	<section class="home-bg vivienda">
 		<div class="stick">
