--- a/pequenos_heroes.html
+++ b/pequenos_heroes.html
@@ -51,33 +51,22 @@
 		<div class="path_header">
 			<div class="container">
 				<a href="home.html">Inicio <span> / </span></a>
-				<a href="heroes.html">El mundo del dinero</a>
+				<a href="heroes.html">Pequeños Heroes</a>
 			</div>
 		</div>
 	</header>	
 
-	<section class="home-bg heroes">
-		<div class="stick">
-			<div class="container">
+	<section class="home-bg pheroes">
+		<div class="container">
+			<div class="row">
+				<div class="worlds world1"></div> 		
+				<div class="worlds world3"></div>
+				<div class="planet world2"></div>				
+				<div class="pequenos_heroes"></div>
 				<div class="wood">
 					<h2>El Mundo del dinero</h2>
 				</div>
-			</div>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="log_user">
-					<div class="logs visited">
-						<h4>visited</h4>
-					</div>
-					<div class="logs sign_in">
-						<h4>sign_in</h4>
-					</div>
-					<div class="go_back">
-						<img src="img/nav_icon4.png" alt="">
-					</div>
-				</div>	
-				<nav>
+				<nav class="bar-pheroes">
 					<ul>
 						<li id="panel1"><a href="#">Ayudas</a></li>
 						<span data-id="panel1"><img src="img/nav_icon1.png" alt=""></span>
@@ -89,36 +78,21 @@
 						<span data-id="panel4"><img src="img/nav_icon4.png" alt=""></span>
 					</ul>
 				</nav>
-				<div class="box_content">
-					<div class="row">
-						<div class="col-md-6">
-							<h2>Vitae dicta sunt</h2>
-							<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. <br><br>
-							Ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam Nulla consequat. </p>
-						</div>
-						<div class="col-md-6">
-							<div class="fds">
-			<!-- 					<iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/VIDEO_ID" frameborder="0"></iframe> -->
-							<iframe width="100%" height="200" src="https://www.youtube.com/embed/vKNKtmXlgY4" frameborder="0" allowfullscreen></iframe>
-							</div>
-							<p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia.</p>
-						</div>
+				<div class="sman"></div>
+				<div class="calification">
+					<h3>Calificación:</h3>
+					<div class="points_stars">
+						<span class="icon-star"></span>
+						<span class="icon-star-outlined"></span>
+						<span class="icon-star-outlined"></span>
+						<span class="icon-star-outlined"></span>
+						<span class="icon-star-outlined"></span>
 					</div>
-					<div class="calification">
-						<h3>Calificación:</h3>
-						<div class="points_stars">
-							<span class="icon-star"></span>
-							<span class="icon-star-outlined"></span>
-							<span class="icon-star-outlined"></span>
-							<span class="icon-star-outlined"></span>
-							<span class="icon-star-outlined"></span>
-						</div>
-					</div>
-				</div>
-				
-			</div>				
+				</div>		
+			</div>
 		</div>
-		<div class="planet"></div>	
+		<div class="nave"></div>
+		<div class="alien"></div>
 	</section>
 
 	<!-- footer -->
