--- a/pequenos_heroes.html
+++ b/pequenos_heroes.html
@@ -59,9 +59,9 @@
 	<section class="home-bg pheroes">
 		<div class="container">
 			<div class="row">
-				<div class="worlds world1"></div> 		
-				<div class="worlds world3"></div>
-				<div class="planet world2"></div>				
+				<div id="one" class="worlds world1"></div> 		
+				<div id="two" class="worlds world2 animate"></div>				
+				<div id="three" class="worlds world3"></div>
 				<div class="pequenos_heroes"></div>
 				<div class="wood">
 					<h2>El Mundo del dinero</h2>
